--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -166,7 +166,7 @@ img.large{
   color: #2020a0;
   background-color: #e0e0ff;
 }
-.alert-error{
+.alert-danger{
   color: #a02020;
   background-color: #ffe0e0e0;
 }
